# rust-web-dev

./: .env  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
rest_up/: Cargo.toml  questions.json
rest_up/src/: main.rs  question.rs
src/: main.rs
