[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"]}
dotenvy = "0.15.7"
http = "1.1.0"
tower-http = {version = "0.5.2", features = ["full", "cors"] }